Refine NamedStrategy serialization and enhance AGENTS documentation